--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -50,7 +50,7 @@
     -->
 
     <!-- The Fine Bros -->
-    <!--   
+    <!-- 
     <string name="app_name">The Fine Bros on Flipr Unofficial</string>
     <string name="app_icon">@drawable/thefinebros_launch_logo</string>
     <string name="white_label">thefinebros</string>
@@ -100,7 +100,8 @@
     <string name="fb_app_id">277020789128327</string>
     -->
 
-    <!-- Smosh
+    <!-- Smosh -->
+    <!-- 
     <string name="app_name">Smosh on Flipr Unofficial</string>
     <string name="app_icon">@drawable/smosh_launch_logo</string>
     <string name="white_label">smosh</string>
@@ -131,8 +132,8 @@
     <string name="signin_bg">shane_bg_open</string>
     <string name="set_banner">shane_banner01</string>
     <string name="fb_app_id">359889977487152</string>
-    -->   
-	
+	-->
+    	
     <!-- College Humor -->
     <!-- 
     <string name="app_name">Collegehumor on Flipr Unofficial</string>
@@ -201,9 +202,9 @@
     -->
         
     <!-- string name="app_name">華視</string --><!-- cts original -->
-    <!-- cts festival-->  
-    <!--    
-    <string name="app_name">華視雲端網</string>
+    <!-- cts festival -->  
+    <!--     
+    <string name="app_name">華視 FLIPr</string>
     <string name="app_icon">@drawable/cts_icon_new</string>
     <string name="white_label">cts</string>
     <string name="mso">cts</string>    
@@ -215,10 +216,10 @@
     <string name="signin_logo">logo_cts</string>        
     <string name="signin_bg">bg_open_cts</string> 
     <string name="set_banner">banner_cts</string>           
-	<string name="fb_app_id">361253423962738</string>              
-     -->
+	<string name="fb_app_id">1429057570658015</string>              
+    -->
     
-    <!-- thenewslens  -->
+    <!-- thenewslens -->
     <!-- 
     <string name="app_name">關鍵評論網 FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_thenewslens</string>    
@@ -237,53 +238,56 @@
 
     <!-- goodtv -->
     <!-- 
-    <string name="app_name">Good TV</string>
-    <string name="app_icon">@drawable/goodtv_launch_logo</string>    
-    <string name="white_label">goodtv</string>     
+    <string name="app_name">GOODTV</string>
+ 	<string name="app_icon">@drawable/goodtv_launch_logo</string>         
+    <string name="white_label">goodtv</string>
     <string name="mso">goodtv</string>
-    <string name="default_region">zh</string>               
+    <string name="default_region">zh</string>    
     <string name="logo">goodtv_on_white</string>   
-    <string name="logo_old">logo_goodtv</string>     
+    <string name="logo_old">logo_goodtv</string>       
     <string name="splash_background">bg_open_goodtv</string>
-    <string name="splash_foreground">open_logo_goodtv</string>    
-    <string name="splash_slogan"></string>
-    <string name="signin_logo">logo_signin_vice</string>        
-    <string name="signin_bg">splash_vice</string>           
-	<string name="fb_app_id">361253423962738</string>                   
-    -->
-    
+    <string name="splash_foreground">open_logo_goodtv</string>   
+    <string name="splash_slogan"></string>           
+    <string name="signin_logo">logo_signin_goodtv</string>        
+    <string name="signin_bg">bg_open_goodtv</string>        	
+    <string name="set_banner">goodtv_banner01</string>
+ 	<string name="fb_app_id">555946694494117</string>       
+ 	-->
+ 	
     <!-- ddtv -->
-    <!--     
+    <!-- 
     <string name="app_name">丁丁電視</string>
     <string name="app_icon">@drawable/ddtv_launch_logo</string>    
     <string name="white_label">ddtv</string>     
     <string name="mso">ddtv</string>
-    <string name="default_region">zh</string>               
-    <string name="logo">logo_ddtv</string>
-    <string name="splash_background">bg_open_ddtv</string>
-    <string name="splash_foreground">open_logo_ddtv</string>    
-    <string name="splash_slogan"></string>      
-    <string name="signin_logo">logo_signin_vice</string>        
-    <string name="signin_bg">splash_vice</string>           
-	<string name="fb_app_id">361253423962738</string>           
-    -->
-            
+    <string name="default_region">en</string>               
+    <string name="logo">ddtv_logo</string>
+    <string name="splash_background">ddtv_bg_open</string>
+    <string name="splash_foreground">ddtv_open_logo</string>    
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">ddtv_logo_signin</string>        
+    <string name="signin_bg">ddtv_bg_open</string>
+    <string name="set_banner">ddtv_banner01</string>
+    <string name="fb_app_id">496791563769983</string>
+    -->                          
+        
     <!-- fcu -->
-    <!--     
+    <!--    
     <string name="app_name">逢甲影音</string>
-    <string name="app_icon">@drawable/fcu_launch_logo</string>    
+    <string name="app_icon">@drawable/launch_logo_fcu</string>    
     <string name="white_label">fcu</string>     
     <string name="mso">fcu</string>
     <string name="default_region">zh</string>               
     <string name="logo">logo_fcu</string>
     <string name="splash_background">bg_open_fcu</string>
     <string name="splash_foreground">open_logo_fcu</string>    
-    <string name="splash_slogan"></string>      
-    <string name="signin_logo">logo_signin_vice</string>        
-    <string name="signin_bg">splash_vice</string>           
-	<string name="fb_app_id">361253423962738</string>           
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">logo_signin_fcu</string>                 
+    <string name="signin_bg">bg_open_fcu</string>
+    <string name="set_banner">banner01_fcu</string>      
+	<string name="fb_app_id">180687745468145</string>
     -->
-            
+	
     <!-- Tzu Chi -->
     <!--    
     <string name="app_name">慈濟</string>
@@ -300,8 +304,8 @@
 	<string name="fb_app_id">361253423962738</string>           
 	-->
 	
-	<!-- superstar  -->
-    <!--    
+	<!-- superstar -->
+    <!--  
     <string name="app_name">網路大明星</string>
     <string name="app_icon">@drawable/launch_logo_superstar</string>    
     <string name="white_label">superstar</string>     
@@ -315,10 +319,10 @@
     <string name="signin_bg">bg_open_superstar</string>
     <string name="set_banner">banner_superstar</string>            
 	<string name="fb_app_id">422631834537839</string>
-	-->
+ 	-->
     
-    <!-- musicvideo  -->
-    <!--    
+    <!-- musicvideo -->
+    <!--  
     <string name="app_name">MV不解釋</string>
     <string name="app_icon">@drawable/launch_logo_musicvideo</string>    
     <string name="white_label">musicvideo</string>     
@@ -330,10 +334,27 @@
     <string name="splash_foreground">open_logo_musicvideo</string>    
     <string name="signin_logo">logo_signin_musicvideo</string>        
     <string name="signin_bg">bg_open_musicvideo</string>
-    <string name="set_banner">banner_musicvideo</string>            
+    <string name="set_banner">banner01_musicvideo</string>            
 	<string name="fb_app_id">463854980410020</string>
     -->
-	
+    
+    <!-- newsflipr -->
+    <!--  
+    <string name="app_name">喇新聞 FLIPr</string>
+    <string name="app_icon">@drawable/launch_logo_newsflipr</string>    
+    <string name="white_label">newsflipr</string>     
+    <string name="mso">newsflipr</string>
+    <string name="default_region">zh</string>               
+    <string name="logo">logo_newsflipr</string>
+    <string name="splash_background">bg_open_newsflipr</string>
+    <string name="splash_slogan"></string>    
+    <string name="splash_foreground">open_logo_newsflipr</string>    
+    <string name="signin_logo">logo_signin_newsflipr</string>        
+    <string name="signin_bg">bg_open_newsflipr</string>
+    <string name="set_banner">banner_newsflipr</string>            
+	<string name="fb_app_id">756691711022525</string>    
+	-->	
+		
     <bool name="uses_chromecast">true</bool>
     
     <string name="guest">訪客</string>
@@ -559,6 +580,6 @@
 	<string name="months">月</string>
 	<string name="year">年</string>
 	<string name="years">年</string>
-	<string name="long_ago">long ago</string>	
-	<string name="pull_to_refresh">Pull to refresh</string>	
+	<string name="long_ago">前</string>	
+    <string name="pull_to_refresh">下拉以重新整理</string>
 </resources>
