--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -599,4 +599,8 @@
 	<string name="years">年</string>
 	<string name="long_ago">前</string>	
     <string name="pull_to_refresh">下拉以重新整理</string>
+    <string name="sign_in_with_email">Email 帳號登入</string>
+    <string name="fb_btn_login">Facebook 帳號登入</string>
+    <string name="fb_btn_logout">Facebook 登出</string>
+    <string name="nothing_changed">Nothing changed!</string>
 </resources>
