--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -604,4 +604,5 @@
     <string name="fb_btn_login">Log in with Facebook</string>
     <string name="fb_btn_logout">Log out</string>    
     <string name="nothing_changed">Nothing changed!</string>    
+    <string name="middot">&#183;</string>
 </resources>
