--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 9x9 -->
-    <!-- 
    	<string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>       	
     <string name="white_label">portal</string>
@@ -15,7 +14,6 @@
     <string name="signin_bg">bgnew</string>      
     <string name="set_banner">banner_9x9</string>     
 	<string name="fb_app_id">361253423962738</string>
-    -->
 
 	<!-- Joey Graceffa -->
     <!--   
@@ -48,7 +46,7 @@
     <string name="signin_logo">spinninrec_logo_signin</string>
     <string name="signin_bg">spinninrec_bg_open</string>
     <string name="set_banner">spinninrec_banner01</string>
-    <string name="fb_app_id">1468306366724948</string>
+    <string name="fb_app_id">708058312558163</string>
     -->
 
     <!-- The Fine Bros -->
@@ -205,6 +203,7 @@
         
     <!-- string name="app_name">華視</string --><!-- cts original -->
     <!-- cts festival -->  
+    <!-- 
     <string name="app_name">華視 FLIPr</string>
     <string name="app_icon">@drawable/cts_icon_new</string>
     <string name="white_label">cts</string>
@@ -218,7 +217,8 @@
     <string name="signin_bg">bg_open_cts</string> 
     <string name="set_banner">banner_cts</string>           
 	<string name="fb_app_id">1429057570658015</string>              
-    
+    -->
+	
     <!-- thenewslens -->
     <!-- 
     <string name="app_name">關鍵評論網 FLIPr</string>
@@ -369,9 +369,26 @@
     <string name="signin_logo">ktsf_logo_signin</string>
     <string name="signin_bg">ktsf_bg_open</string>
     <string name="set_banner">ktsf_banner01</string>
-    <string name="fb_app_id">496791563769983</string>
+    <string name="fb_app_id">493993324039786</string>
+	-->
+		
+    <!-- Power ng Pinoy TV -->
+    <!-- 
+    <string name="app_name">Pinoy TV</string>
+    <string name="app_icon">@drawable/pinoytv_launch_logo</string>
+    <string name="white_label">pinoytv</string>
+    <string name="mso">pinoytv</string>
+    <string name="default_region">en</string>
+    <string name="logo">pinoytv_logo</string>
+    <string name="splash_background">pinoytv_bg_open</string>
+    <string name="splash_foreground">pinoytv_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">pinoytv_logo_signin</string>
+    <string name="signin_bg">pinoytv_bg_open</string>
+    <string name="set_banner">pinoytv_banner01</string>
+    <string name="fb_app_id">361253423962738</string>
 	-->	
-    		
+	    		
     <bool name="uses_chromecast">true</bool>
     
     <string name="guest">訪客</string>
