--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -543,7 +543,7 @@
 	<string name="move_failure">移動失敗！</string>	
 	<string name="moved" formatted="false">節目已從%1 搬至 %2</string>	
 	<string name="categorycolon">目錄：</string>
-	<string name="streaming_portal">返回首頁</string>	
+	<string name="back_to_home">回到首頁</string>	
 	<string name="quit">中止</string>
 	<string name="retry">重試</string>
 	<string name="personal_history">瀏覽記錄</string>
@@ -620,5 +620,6 @@
     <string name="fb_btn_login">Facebook 帳號登入</string>
     <string name="fb_btn_logout">Facebook 登出</string>
     <string name="nothing_changed">Nothing changed!</string>
-    <string name="middot">&#183;</string>    
+    <string name="middot">&#183;</string>   
+    <string name="about_us">About Us</string>     
 </resources>
