--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -388,6 +388,41 @@
     <string name="fb_app_id">361253423962738</string>
 	-->	
 		         
+    <!-- Demo -->
+    <!-- 
+    <string name="app_name">Demo</string>
+    <string name="app_icon">@drawable/demo_launch_logo</string>
+    <string name="white_label">demo</string>
+    <string name="mso">demo</string>
+    <string name="default_region">en</string>
+    <string name="logo">demo_logo</string>
+    <string name="splash_background">demo_bg_open</string>
+    <string name="splash_foreground">demo_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">demo_logo_signin</string>
+    <string name="signin_bg">demo_bg_open</string>
+    <string name="set_banner">demo_banner01</string>
+    <string name="fb_app_id">361253423962738</string>
+    -->
+    
+    <!-- Magazine -->
+    <!-- 
+    <string name="app_name">Magazine</string>
+    <string name="app_icon">@drawable/magazine_launch_logo</string>
+    <string name="white_label">magazine</string>
+    <string name="mso">magazine</string>
+    <string name="default_region">zh</string>
+    <string name="logo">magazine_logo</string>
+    <string name="splash_background">magazine_bg_open</string>
+    <string name="splash_foreground">magazine_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">magazine_logo_signin</string>
+    <string name="signin_bg">magazine_bg_open</string>
+    <string name="set_banner">magazine_banner01</string>
+    <string name="fb_app_id">535963343168975</string>
+    -->
+
+		         
     <bool name="uses_chromecast">true</bool>
     
     <string name="guest">Guest</string>
