--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -389,6 +389,41 @@
     <string name="fb_app_id">361253423962738</string>
 	-->	
 	    		
+    <!-- Demo -->
+    <!-- 
+    <string name="app_name">Demo</string>
+    <string name="app_icon">@drawable/demo_launch_logo</string>
+    <string name="white_label">demo</string>
+    <string name="mso">demo</string>
+    <string name="default_region">en</string>
+    <string name="logo">demo_logo</string>
+    <string name="splash_background">demo_bg_open</string>
+    <string name="splash_foreground">demo_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">demo_logo_signin</string>
+    <string name="signin_bg">demo_bg_open</string>
+    <string name="set_banner">demo_banner01</string>
+    <string name="fb_app_id">361253423962738</string>
+    -->
+    
+    <!-- Magazine -->
+    <!-- 
+    <string name="app_name">癮雜誌</string>
+    <string name="app_icon">@drawable/magazine_launch_logo</string>
+    <string name="white_label">magazine</string>
+    <string name="mso">magazine</string>
+    <string name="default_region">zh</string>
+    <string name="logo">magazine_logo</string>
+    <string name="splash_background">magazine_bg_open</string>
+    <string name="splash_foreground">magazine_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">magazine_logo_signin</string>
+    <string name="signin_bg">magazine_bg_open</string>
+    <string name="set_banner">magazine_banner01</string>
+    <string name="fb_app_id">535963343168975</string>
+    -->
+
+
     <bool name="uses_chromecast">true</bool>
     
     <string name="guest">訪客</string>
@@ -438,7 +473,7 @@
     <string name="sign_up_button">註冊</string>
     <string name="sign_in_sign_up_botton">登入 / 註冊</string>
     <string name="version">版本： </string>    
-    <string name="copyright">Copyright 2012-2014  9x9.tv</string>
+    <string name="copyright">9x9.tv 版權所有 ©2012-2014</string>
     <string name="visit_for_terms">請參閱使用條款與隱私權政策</string>
     <string name="synchronizing">同步您的YouTube帳號，此將花一些時間。</string>
     <string name="tlogin_sign_in_with_youtube">使用 YouTube 帳號登入</string>
