--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -659,7 +659,7 @@
     <string name="about_us">關於我們</string>     
   	<string name="messages">通知</string>    
   	<string name="no_new_messages">沒有新的通知</string>
-	<string name="notifications">通知</string>
+	<string name="notifications">通知設定</string>
 	<string name="enable_notifications">啟用通知設定</string>
 	<string name="vibrate_when_notified">通知設定為振動</string>
 	<string name="sound_when_notified">通知設定為聲音</string> 	
