--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>         
     <string name="white_label">portal</string>
-    <string name="mso">demo</string>
+    <string name="mso">9x9</string>
     <string name="default_region">en</string>    
     <string name="logo">tvlogo</string>   
     <string name="splash_background">bgnew</string>
@@ -202,7 +202,7 @@
     -->
 	
     <!-- cts -->
-    <!--
+    <!-- 
     <string name="app_name">CTS</string>
     <string name="app_icon">@drawable/cts_icon_new</string>    
     <string name="white_label">cts</string>     
@@ -216,25 +216,25 @@
     <string name="signin_bg">bg_open_cts</string>
     <string name="set_banner">banner_cts</string>            
 	<string name="fb_app_id">1429057570658015</string>       
-	-->
+	 -->
 	
     <!-- goodtv -->
-    <!-- 
+     <!-- 
     <string name="app_name">GOODTV</string>
- 	<string name="app_icon">@drawable/goodtv_launch_logo</string>         
+ 	<string name="app_icon">@drawable/launch_logo_goodtv</string>         
     <string name="white_label">goodtv</string>
     <string name="mso">goodtv</string>
     <string name="default_region">zh</string>    
-    <string name="logo">goodtv_on_white</string>   
+    <string name="logo">logo_goodtv</string>   
     <string name="logo_old">logo_goodtv</string>       
     <string name="splash_background">bg_open_goodtv</string>
     <string name="splash_foreground">open_logo_goodtv</string>   
     <string name="splash_slogan"></string>           
     <string name="signin_logo">logo_signin_goodtv</string>        
     <string name="signin_bg">bg_open_goodtv</string>        	
-    <string name="set_banner">goodtv_banner01</string>
+    <string name="set_banner">banner01_goodtv</string>
  	<string name="fb_app_id">555946694494117</string>       
- 	-->
+	  -->
  	
     <!-- ddtv -->
     <!-- 
@@ -254,7 +254,7 @@
      -->
   
     <!-- fcu -->
-	<!-- 
+	<!--  
     <string name="app_name">FCU</string>
     <string name="app_icon">@drawable/launch_logo_fcu</string>    
     <string name="white_label">fcu</string>     
@@ -268,7 +268,7 @@
     <string name="signin_bg">bg_open_fcu</string>
     <string name="set_banner">banner01_fcu</string>      
 	<string name="fb_app_id">180687745468145</string>           
-    -->
+     -->
   	           
     <!-- Tzu Chi -->
     <!--    
@@ -301,10 +301,11 @@
     <string name="signin_bg">bg_open_thenewslens</string>
     <string name="set_banner">banner_thenewslens</string>            
 	<string name="fb_app_id">436354623134686</string>
-	-->
+	 --> 
+
 	 
  	<!-- superstar  -->
-    <!-- 
+    <!--  
     <string name="app_name">Superstar FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_superstar</string>    
     <string name="white_label">superstar</string>     
@@ -318,10 +319,10 @@
     <string name="signin_bg">bg_open_superstar</string>
     <string name="set_banner">banner_superstar</string>            
 	<string name="fb_app_id">422631834537839</string>
-	-->	
+	 -->	
     
     <!-- musicvideo -->
-    <!-- 
+    <!--  
     <string name="app_name">Musicvideo FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_musicvideo</string>    
     <string name="white_label">musicvideo</string>     
@@ -335,14 +336,14 @@
     <string name="signin_bg">bg_open_musicvideo</string>
     <string name="set_banner">banner01_musicvideo</string>            
 	<string name="fb_app_id">463854980410020</string>
-	-->	
+	 -->	
 	
 	<!-- newsflipr -->
-    <!-- 
+    <!--  
     <string name="app_name">News FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_newsflipr</string>    
-    <string name="white_label">newsflipr</string>     
-    <string name="mso">newsflipr</string>
+    <string name="white_label">news</string>     
+    <string name="mso">news</string>
     <string name="default_region">zh</string>               
     <string name="logo">logo_newsflipr</string>
     <string name="splash_background">bg_open_newsflipr</string>
@@ -352,7 +353,7 @@
     <string name="signin_bg">bg_open_newsflipr</string>
     <string name="set_banner">banner_newsflipr</string>            
 	<string name="fb_app_id">756691711022525</string>
-	-->	
+	 -->	
 
     <!-- ktsf26 -->
     <!--  
@@ -403,7 +404,7 @@
     <string name="signin_bg">demo_bg_open</string>
     <string name="set_banner">demo_banner01</string>
     <string name="fb_app_id">361253423962738</string>
-    -->
+	-->
     
     <!-- Magazine -->
     <!-- 
@@ -420,6 +421,23 @@
     <string name="signin_bg">magazine_bg_open</string>
     <string name="set_banner">magazine_banner01</string>
     <string name="fb_app_id">535963343168975</string>
+    -->
+    
+    <!-- test -->
+    <!-- 
+    <string name="app_name">test FLIPr</string>
+    <string name="app_icon">@drawable/launch_logo_test</string>    
+    <string name="white_label">test</string>     
+    <string name="mso">test</string>
+    <string name="default_region">zh</string>               
+    <string name="logo">logo_test</string>
+    <string name="splash_background">bg_open_test</string>
+    <string name="splash_slogan"></string>    
+    <string name="splash_foreground">open_logo_test</string>    
+    <string name="signin_logo">logo_signin_test</string>        
+    <string name="signin_bg">bg_open_test</string>
+    <string name="set_banner">banner_test</string>            
+	<string name="fb_app_id">390805357729394</string>
     -->
 
 		         
@@ -661,11 +679,11 @@
 	<string name="notifications">Notifications</string>
 	<string name="enable_notifications">Enable notifications</string>
 	<string name="vibrate_when_notified">Vibrate when notified</string>
-	<string name="sound_when_notified">Sound when notified</string>  	
-	<string name="nag1">Flip &amp; discover great online programs on the big screen!</string>
-	<string name="nag2">Manage your own favorite programs. Watch them anytime, anywhere.</string>
-	<string name="nag3">Sign up to get all the goodies.</string>
-	<string name="supports_chromecast">(Supports Chromecast)</string>
-	<string name="skip_this_step">Skip this step</string>	
-	<string name="welcome">Welcome!</string>
+	<string name="sound_when_notified">Sound when notified</string> 
+    <string name="nag1">Flip &amp; discover great online programs on the big screen!</string>
+    <string name="nag2">Manage your own favorite programs. Watch them anytime, anywhere.</string>
+    <string name="nag3">Sign up to get all the goodies.</string>
+    <string name="supports_chromecast">(Supports Chromecast)</string>
+    <string name="skip_this_step">Skip this step</string>
+    <string name="welcome">Welcome!</string> 	
 </resources>
