--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -203,7 +203,7 @@
         
     <!-- string name="app_name">華視</string --><!-- cts original -->
     <!-- cts festival -->  
-    <!-- 
+     <!-- 
     <string name="app_name">華視 FLIPr</string>
     <string name="app_icon">@drawable/cts_icon_new</string>
     <string name="white_label">cts</string>
@@ -217,10 +217,10 @@
     <string name="signin_bg">bg_open_cts</string> 
     <string name="set_banner">banner_cts</string>           
 	<string name="fb_app_id">1429057570658015</string>              
-    -->
+     -->
 	
     <!-- thenewslens -->
-    <!-- 
+    <!--  
     <string name="app_name">關鍵評論網 FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_thenewslens</string>    
     <string name="white_label">thenewslens</string>     
@@ -234,25 +234,25 @@
     <string name="signin_bg">bg_open_thenewslens</string>
     <string name="set_banner">banner_thenewslens</string>            
 	<string name="fb_app_id">436354623134686</string>
-    -->
+     -->
 
     <!-- goodtv -->
-    <!-- 
+     <!-- 
     <string name="app_name">GOODTV</string>
- 	<string name="app_icon">@drawable/goodtv_launch_logo</string>         
+ 	<string name="app_icon">@drawable/launch_logo_goodtv</string>         
     <string name="white_label">goodtv</string>
     <string name="mso">goodtv</string>
     <string name="default_region">zh</string>    
-    <string name="logo">goodtv_on_white</string>   
+    <string name="logo">logo_goodtv</string>   
     <string name="logo_old">logo_goodtv</string>       
     <string name="splash_background">bg_open_goodtv</string>
     <string name="splash_foreground">open_logo_goodtv</string>   
     <string name="splash_slogan"></string>           
     <string name="signin_logo">logo_signin_goodtv</string>        
     <string name="signin_bg">bg_open_goodtv</string>        	
-    <string name="set_banner">goodtv_banner01</string>
+    <string name="set_banner">banner01_goodtv</string>
  	<string name="fb_app_id">555946694494117</string>       
- 	-->
+     -->
  	
     <!-- ddtv -->
     <!-- 
@@ -272,7 +272,7 @@
     -->                          
         
     <!-- fcu -->
-    <!--    
+    <!--     
     <string name="app_name">逢甲影音</string>
     <string name="app_icon">@drawable/launch_logo_fcu</string>    
     <string name="white_label">fcu</string>     
@@ -286,7 +286,7 @@
     <string name="signin_bg">bg_open_fcu</string>
     <string name="set_banner">banner01_fcu</string>      
 	<string name="fb_app_id">180687745468145</string>
-    -->
+     -->
 	
     <!-- Tzu Chi -->
     <!--    
@@ -305,7 +305,7 @@
 	-->
 	
 	<!-- superstar -->
-    <!--  
+    <!--   
     <string name="app_name">網路大明星</string>
     <string name="app_icon">@drawable/launch_logo_superstar</string>    
     <string name="white_label">superstar</string>     
@@ -319,10 +319,10 @@
     <string name="signin_bg">bg_open_superstar</string>
     <string name="set_banner">banner_superstar</string>            
 	<string name="fb_app_id">422631834537839</string>
- 	-->
+ 	 -->
     
     <!-- musicvideo -->
-    <!--  
+    <!--   
     <string name="app_name">MV不解釋</string>
     <string name="app_icon">@drawable/launch_logo_musicvideo</string>    
     <string name="white_label">musicvideo</string>     
@@ -339,11 +339,11 @@
     -->
     
     <!-- newsflipr -->
-    <!--  
+    <!--   
     <string name="app_name">喇新聞 FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_newsflipr</string>    
-    <string name="white_label">newsflipr</string>     
-    <string name="mso">newsflipr</string>
+    <string name="white_label">news</string>     
+    <string name="mso">news</string>
     <string name="default_region">zh</string>               
     <string name="logo">logo_newsflipr</string>
     <string name="splash_background">bg_open_newsflipr</string>
@@ -353,7 +353,7 @@
     <string name="signin_bg">bg_open_newsflipr</string>
     <string name="set_banner">banner_newsflipr</string>            
 	<string name="fb_app_id">756691711022525</string>    
-	-->	
+	 -->	
 
     <!-- ktsf26 -->
     <!--  
@@ -404,7 +404,7 @@
     <string name="signin_bg">demo_bg_open</string>
     <string name="set_banner">demo_banner01</string>
     <string name="fb_app_id">361253423962738</string>
-    -->
+	-->	
     
     <!-- Magazine -->
     <!-- 
@@ -422,7 +422,23 @@
     <string name="set_banner">magazine_banner01</string>
     <string name="fb_app_id">535963343168975</string>
     -->
-
+    
+    <!-- test -->
+    <!-- 
+    <string name="app_name">test FLIPr</string>
+    <string name="app_icon">@drawable/launch_logo_test</string>    
+    <string name="white_label">test</string>     
+    <string name="mso">test</string>
+    <string name="default_region">zh</string>               
+    <string name="logo">logo_test</string>
+    <string name="splash_background">bg_open_test</string>
+    <string name="splash_slogan"></string>    
+    <string name="splash_foreground">open_logo_test</string>    
+    <string name="signin_logo">logo_signin_test</string>        
+    <string name="signin_bg">bg_open_test</string>
+    <string name="set_banner">banner_test</string>            
+	<string name="fb_app_id">390805357729394</string>
+    -->
 
     <bool name="uses_chromecast">true</bool>
     
@@ -664,9 +680,9 @@
 	<string name="vibrate_when_notified">通知設定為振動</string>
 	<string name="sound_when_notified">通知設定為聲音</string> 	
 	<string name="nag1">在大屏幕上，搖搖「看」最夯的節目</string>
-	<string name="nag2">您可以隨時隨地觀看和管理自己喜愛的節目</string>
-	<string name="nag3">註冊新帳號就可以觀看最夯的節目</string>
-	<string name="supports_chromecast">(支援 Chromecast)</string>
-	<string name="skip_this_step">略過此步驟</string>
-	<string name="welcome">歡迎！</string>
+    <string name="nag2">您可以隨時隨地觀看和管理自己喜愛的節目</string>
+    <string name="nag3">註冊新帳號就可以觀看最夯的節目</string>
+    <string name="supports_chromecast">(支援 Chromecast)</string>
+    <string name="skip_this_step">略過此步驟</string>
+    <string name="welcome">歡迎！</string>
 </resources>
