--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- 9x9-->
-    <!--   
+    <!-- 9x9-->  
     <string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>         
     <string name="white_label">portal</string>
-    <string name="mso">9x9</string>
+    <string name="mso">demo</string>
     <string name="default_region">en</string>    
     <string name="logo">tvlogo</string>   
     <string name="splash_background">bgnew</string>
@@ -15,7 +14,6 @@
     <string name="signin_bg">bgnew</string>     
     <string name="set_banner">banner_9x9</string>   
 	<string name="fb_app_id">361253423962738</string>
-    -->
 		 
     <!-- Joey Graceffa -->
     <!-- 
@@ -461,6 +459,7 @@
     
     <!-- Daaitv -->
      
+     <!-- 
     <string name="app_name">Daaitv FLIPr</string>
     <string name="app_icon">@drawable/daaitv_launch_logo</string>
     <string name="white_label">daaitv</string>
@@ -474,7 +473,7 @@
     <string name="signin_bg">daaitv_bg_open</string>
     <string name="set_banner">daaitv_banner</string>
     <string name="fb_app_id">252273138293802</string>
-
+-->
 		         
     <bool name="uses_chromecast">true</bool>
     
