--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -14,7 +14,7 @@
     <string name="signin_bg">bgnew</string>      
     <string name="set_banner">banner_9x9</string>     
 	<string name="fb_app_id">361253423962738</string>
-		
+				
 	<!-- Joey Graceffa -->
     <!--   
     <string name="app_name">JoeyGraceffa on Flipr Unofficial</string>
@@ -46,11 +46,11 @@
     <string name="signin_logo">jennamarbles_logo_signin</string>
     <string name="signin_bg">jennamarbles_bg_open</string>
     <string name="set_banner">jennamarbles_banner01</string>
-    <string name="fb_app_id">361253423962738</string>
+    <string name="fb_app_id">278438812338830</string>
     -->
 
     <!-- Ray William Johnson -->
-    <!--   
+    <!-- 
     <string name="app_name">Flipr - Ray William Johnson Edition</string>
     <string name="app_icon">@drawable/raywilliamjohnson_launch_logo</string>
     <string name="white_label">raywilliamjohnson</string>
@@ -63,9 +63,60 @@
     <string name="signin_logo">raywilliamjohnson_logo_signin</string>
     <string name="signin_bg">raywilliamjohnson_bg_open</string>
     <string name="set_banner">raywilliamjohnson_banner01</string>
-    <string name="fb_app_id">361253423962738</string>
+    <string name="fb_app_id">1419139305027309</string>
     -->
-
+    
+    <!-- The Ellen Show -->
+    <!-- 
+    <string name="app_name">Flipr - The Ellen Show Edition</string>
+    <string name="app_icon">@drawable/theellenshow_launch_logo</string>
+    <string name="white_label">theellenshow</string>
+    <string name="mso">theellenshow</string>
+    <string name="default_region">en</string>
+    <string name="logo">theellenshow_logo</string>
+    <string name="splash_background">theellenshow_bg_open</string>
+    <string name="splash_foreground">theellenshow_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">theellenshow_logo_signin</string>
+    <string name="signin_bg">theellenshow_bg_open</string>
+    <string name="set_banner">theellenshow_banner01</string>
+    <string name="fb_app_id">235033980039180</string>
+    -->
+    
+    <!-- The Rooster Teeth -->
+    <!-- 
+    <string name="app_name">Flipr - The Rooster Teeth Edition</string>
+    <string name="app_icon">@drawable/roosterteeth_launch_logo</string>
+    <string name="white_label">roosterteeth</string>
+    <string name="mso">roosterteeth</string>
+    <string name="default_region">en</string>
+    <string name="logo">roosterteeth_logo</string>
+    <string name="splash_background">roosterteeth_bg_open</string>
+    <string name="splash_foreground">roosterteeth_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">roosterteeth_logo_signin</string>
+    <string name="signin_bg">roosterteeth_bg_open</string>
+    <string name="set_banner">roosterteeth_banner01</string>
+    <string name="fb_app_id">1428431837427582</string>
+    -->
+       
+    <!-- Freddiew -->
+    <!-- 
+    <string name="app_name">Flipr - The Freddiew Edition</string>
+    <string name="app_icon">@drawable/freddiew_launch_logo</string>
+    <string name="white_label">freddiew</string>
+    <string name="mso">freddiew</string>
+    <string name="default_region">en</string>
+    <string name="logo">freddiew_logo</string>
+    <string name="splash_background">freddiew_bg_open</string>
+    <string name="splash_foreground">freddiew_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">freddiew_logo_signin</string>
+    <string name="signin_bg">freddiew_bg_open</string>
+    <string name="set_banner">freddiew_banner01</string>
+    <string name="fb_app_id">761677907197600</string>
+      -->
+         
     <!-- Spinnin' Records -->
     <!--   
     <string name="app_name">SpinninRec on Flipr Unofficial</string>
@@ -220,24 +271,25 @@
     -->
     
     <!-- EchoMusic -->
-    <!--
+    <!-- 
     <string name="app_name">音樂圖書館</string>
-    <string name="app_icon">@drawable/ic_launcher_hdpi_echomusic</string>
+    <string name="app_icon">@drawable/launch_logo_echomusic</string>
     <string name="white_label">echomusic</string>
     <string name="mso">echomusic</string>
     <string name="default_region">zh</string>
-    <string name="logo">logo_topbar_echomusic</string>
-    <string name="splash_background">splash_bg_echomusic</string>
-    <string name="splash_foreground">splash_logo_echomusic</string>
+    <string name="logo">logo_echomusic</string>
+    <string name="splash_background">bg_open_echomusic</string>
+    <string name="splash_foreground">open_logo_echomusic</string>
     <string name="splash_slogan"></string>
-    <string name="signin_logo">logo_signin_vice</string>        
-    <string name="signin_bg">splash_vice</string>           
-	<string name="fb_app_id">361253423962738</string>       
-    -->
-        
+    <string name="signin_logo">logo_signin_echomusic</string>
+    <string name="signin_bg">bg_open_echomusic</string>     
+    <string name="set_banner">banner_echomusic</string>   
+	<string name="fb_app_id">212239432317755</string>
+     -->
+         
     <!-- string name="app_name">華視</string --><!-- cts original -->
     <!-- cts festival -->  
-     <!-- 
+    <!--   
     <string name="app_name">華視 FLIPr</string>
     <string name="app_icon">@drawable/cts_icon_new</string>
     <string name="white_label">cts</string>
@@ -251,10 +303,10 @@
     <string name="signin_bg">bg_open_cts</string> 
     <string name="set_banner">banner_cts</string>           
 	<string name="fb_app_id">1429057570658015</string>              
-     -->
+    --> 
 	
     <!-- thenewslens -->
-    <!--  
+    <!--   
     <string name="app_name">關鍵評論網 FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_thenewslens</string>    
     <string name="white_label">thenewslens</string>     
@@ -268,10 +320,10 @@
     <string name="signin_bg">bg_open_thenewslens</string>
     <string name="set_banner">banner_thenewslens</string>            
 	<string name="fb_app_id">436354623134686</string>
-     -->
+    -->
 
     <!-- goodtv -->
-     <!-- 
+    <!--   
     <string name="app_name">GOODTV</string>
  	<string name="app_icon">@drawable/launch_logo_goodtv</string>         
     <string name="white_label">goodtv</string>
@@ -286,10 +338,10 @@
     <string name="signin_bg">bg_open_goodtv</string>        	
     <string name="set_banner">banner01_goodtv</string>
  	<string name="fb_app_id">555946694494117</string>       
-     -->
+    --> 
  	
     <!-- ddtv -->
-    <!-- 
+    <!--       
     <string name="app_name">丁丁電視</string>
     <string name="app_icon">@drawable/ddtv_launch_logo</string>    
     <string name="white_label">ddtv</string>     
@@ -303,10 +355,10 @@
     <string name="signin_bg">ddtv_bg_open</string>
     <string name="set_banner">ddtv_banner01</string>
     <string name="fb_app_id">496791563769983</string>
-    -->                          
-        
+    --> 
+    
     <!-- fcu -->
-    <!--     
+    <!--       
     <string name="app_name">逢甲影音</string>
     <string name="app_icon">@drawable/launch_logo_fcu</string>    
     <string name="white_label">fcu</string>     
@@ -320,7 +372,7 @@
     <string name="signin_bg">bg_open_fcu</string>
     <string name="set_banner">banner01_fcu</string>      
 	<string name="fb_app_id">180687745468145</string>
-     -->
+     -->  
 	
     <!-- Tzu Chi -->
     <!--    
@@ -339,7 +391,7 @@
 	-->
 	
 	<!-- superstar -->
-    <!--   
+    <!--    
     <string name="app_name">網路大明星</string>
     <string name="app_icon">@drawable/launch_logo_superstar</string>    
     <string name="white_label">superstar</string>     
@@ -353,10 +405,10 @@
     <string name="signin_bg">bg_open_superstar</string>
     <string name="set_banner">banner_superstar</string>            
 	<string name="fb_app_id">422631834537839</string>
- 	 -->
+ 	  --> 
     
     <!-- musicvideo -->
-    <!--   
+     <!--   
     <string name="app_name">MV不解釋</string>
     <string name="app_icon">@drawable/launch_logo_musicvideo</string>    
     <string name="white_label">musicvideo</string>     
@@ -370,10 +422,10 @@
     <string name="signin_bg">bg_open_musicvideo</string>
     <string name="set_banner">banner01_musicvideo</string>            
 	<string name="fb_app_id">463854980410020</string>
-    -->
+     --> 
     
     <!-- newsflipr -->
-    <!--   
+    <!--    
     <string name="app_name">喇新聞 FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_newsflipr</string>    
     <string name="white_label">news</string>     
@@ -387,7 +439,7 @@
     <string name="signin_bg">bg_open_newsflipr</string>
     <string name="set_banner">banner_newsflipr</string>            
 	<string name="fb_app_id">756691711022525</string>    
-	 -->	
+	 --> 	
 
     <!-- ktsf26 -->
     <!--  
@@ -423,7 +475,7 @@
     <string name="fb_app_id">361253423962738</string>
 	-->	
 	    		
-    <!-- Demo -->
+    <!-- YuenFoongYu -->
     <!-- 
     <string name="app_name">Demo</string>
     <string name="app_icon">@drawable/demo_launch_logo</string>
@@ -439,9 +491,26 @@
     <string name="set_banner">demo_banner01</string>
     <string name="fb_app_id">361253423962738</string>
 	-->	
-    
+
+    <!-- Demo -->
+    <!-- 
+   	<string name="app_name">Demo</string>
+    <string name="app_icon">@drawable/ddtv_launch_logo</string>    
+	<string name="white_label">demo</string>
+    <string name="mso">demo</string>
+    <string name="default_region">en</string>
+    <string name="logo">ddtv_logo</string>
+    <string name="splash_background">ddtv_bg_open</string>
+    <string name="splash_foreground">ddtv_open_logo</string>    
+    <string name="splash_slogan"></string>     
+    <string name="signin_logo">ddtv_logo_signin</string>        
+    <string name="signin_bg">ddtv_bg_open</string>
+    <string name="set_banner">ddtv_banner01</string>
+	<string name="fb_app_id">361253423962738</string>
+	-->	
+		
     <!-- Magazine -->
-    <!--  
+    <!-- 
     <string name="app_name">癮雜誌</string>
     <string name="app_icon">@drawable/magazine_launch_logo</string>
     <string name="white_label">magazine</string>
@@ -455,7 +524,7 @@
     <string name="signin_bg">magazine_bg_open</string>
     <string name="set_banner">magazine_banner01</string>
     <string name="fb_app_id">535963343168975</string>
-    -->
+    --> 
     
     <!-- test -->
     <!-- 
@@ -489,11 +558,11 @@
     <string name="signin_bg">gametube_bg_open</string>
     <string name="set_banner">gametube_banner</string>
     <string name="fb_app_id">708083305909248</string>
-     -->
+    -->
      
     <!-- Daaitv -->
     <!-- 
-    <string name="app_name">大愛電視 FLIPr</string>
+    <string name="app_name">大愛 FLIPr</string>
     <string name="app_icon">@drawable/daaitv_launch_logo</string>
     <string name="white_label">daaitv</string>
     <string name="mso">daaitv</string>
